--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         double-check its response.
       </p>
     </div>
-    <script src="script.js"></script>
+    <script src="./apikey.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
